--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "supermarket",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "12.4.0",
+    "npm": "6.9.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cli": "^8.2.2",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
@@ -41,17 +48,19 @@
     "ngx-spinner": "^9.0.1",
     "ngx-toast-notifications": "^1.3.0",
     "owl.carousel": "^2.3.4",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.11.1",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "~8.2.14",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/http": "^7.2.16",
     "@angular/language-service": "~8.2.14",
     "@types/bootstrap": "^4.5.0",
